syntax = "proto2";

import "mediapipe/framework/calculator.proto";

message DetectionToLargestSquareRectCalculatorOptions {
  extend mediapipe.CalculatorOptions {
    optional DetectionToLargestSquareRectCalculatorOptions ext = 352535353;
  }

  required double relative_margin = 1 [default = 0.25];
  required double min_score = 2 [default = 0.8];
}

